<resources>
    <string name="app_name">LibreInfo</string>
    <string name="departures">Aktuální odjezdy</string>
    <string name="departures_settings">Odjezdy</string>
    <string name="departure_source">Zdroj dat</string>
    <string name="departure_source_server">Server (oficiální)</string>
    <string name="departure_source_local">Zařízení (neoficiální)</string>
    <string name="departure_source_warning_title">Neoficiální data</string>
    <string name="departure_source_warning_message">Odjezdy se budou počítat přímo v zařízení z uložených jízdních řádů. Taková data jsou neoficiální a nemusí odpovídat těm ze serveru.</string>
    <string name="departure_source_warning_confirm">Rozumím</string>
    <string name="delay_render">Vzhled zpoždění</string>
    <string name="show_lowfloor">Zobrazit nízkopodlažnost</string>
    <string name="departure_count_max">Počet zobrazovaných odjezdů</string>
    <string name="do_not_show">Nezobrazovat</string>
    <string name="parentheses">Závorky</string>
    <string name="rectangle">Obdelník</string>
    <string name="vehicle_map">Poloha vozidel [BETA]</string>
    <string name="vehicles">Seznam vozidel</string>
    <string name="events">Mimořádné události</string>
    <string name="diversions">Změny v dopravě</string>
    <string name="news">Novinky</string>
    <string name="schemes">Schémata linek</string>
    <string name="connection_search">Hledání spojení</string>
    <string name="settings">Nastavení</string>
    <string name="dev_settings">Dev settings</string>
    <string name="about">O aplikaci</string>
    <string name="data_sources">Zdroje dat a poděkování</string>
    <string name="sorting">Řazení</string>
    <string name="ascending">Vzestupně</string>
    <string name="descending">Sestupně</string>
    <string name="sort_by">Řadit podle</string>
    <string name="about_text">Neoficiální aplikace pro systém IDS JMK.\nData jsou získávána z veřejných zdrojů a z interní API KORDISu.\n\nMapa je z mnoho důvodů stále v dost mizerném stavu…\n\nAplikace je stále v aktivním vývoji.</string>
    <string name="select_poi">Vyberte objekt</string>
    <string name="nothing_here">Zdá se, že tady nic není…</string>
    <string name="vehicle_delay">Zdržení:</string>
    <string name="from">Od</string>
    <string name="to">Do</string>
    <string name="departure_date">Datum odjezdu</string>
    <string name="departure_time">Čas odjezdu</string>
    <string name="connection_date_time">Datum a čas</string>
    <string name="departure">Odjezd</string>
    <string name="arrival">Příjezd</string>
    <string name="date_yesterday">Včera</string>
    <string name="date_today">Dnes</string>
    <string name="date_tomorrow">Zítra</string>
    <string name="confirm">Potvrdit</string>
    <string name="cancel">Zrušit</string>
    <string name="search">Hledat</string>
    <string name="connection_select_stops">Vyberte počáteční i cílovou zastávku</string>
    <string name="connection_dev_warning">Hledání spojení je stále v brzkém vývoji, takže chybí některé nastavení, ovládání a nemusí být úplně doladěné UI. Všechny tyto věci se postupně vyřeší.</string>
    <string name="connection_results">Výsledky hledání</string>
    <string name="connection_before">před %s</string>
    <string name="connection_in">za %s</string>
    <string name="connection_now">nyní</string>
    <string name="departure_now">Nyní</string>
    <string name="connection_stops">%d zastávek</string>
    <string name="connection_walk_to_stop">Pěšky na zastávku asi</string>
    <string name="connection_walk_transfer">Přestup pěšky asi</string>
    <string name="connection_walk_to_destination">Pěšky do cíle asi</string>
    <string name="on_time">Včas</string>
    <string name="vehicle_number">Vůz %d</string>
    <string name="trip">Trasa</string>
    <string name="trip_number">Trasa %1d/%2d</string>
    <string name="retry">Zkusit znovu</string>
    <string name="generic_error">Nastala chyba</string>
    <string name="error_offline_title">Jste offline</string>
    <string name="error_server_title">Problém se serverem</string>
    <string name="error_parse_title">Neplatná odpověď</string>
    <string name="error_data_title">Poškozená data</string>
    <string name="data_load_error">Nepodařilo se načíst data</string>
    <string name="error_reach">Nepodařilo se připojit (%1$s)</string>
    <string name="error_parse">Nepodařilo se zpracovat odpověď (%1$s)</string>
    <string name="error_read">Nepodařilo se načíst odpověď (%1$s)</string>
    <string name="error_timeout">Vypršel časový limit %1$d s (%2$s)</string>
    <string name="error_server">Chyba serveru %1$d (%2$s)</string>
    <string name="error_unknown">Neočekávaná chyba (%1$s)</string>
    <string name="endpoint_static_gtfs">statická data</string>
    <string name="endpoint_app_server">server aplikace</string>
    <string name="apply">Použít</string>
    <string name="clear_filters">Smazat filtry</string>
    <string name="filters_found_nothing">Tyto filtry nic nenašly</string>
    <string name="update_ready">Je připravena aktualizace k instalaci</string>
    <string name="close">Zavřít</string>
    <string name="install">Nainstalovat</string>
    <string name="install_permission_title">Povolit instalaci</string>
    <string name="install_permission_rationale">Aby mohla aplikace nainstalovat staženou aktualizaci, potřebuje povolení instalovat aplikace z tohoto zdroje. Na další obrazovce prosím toto povolení zapněte.</string>
    <string name="continue_action">Pokračovat</string>
    <string name="install_failed_title">Instalace se nezdařila</string>
    <string name="install_failed_message">Aktualizaci se nepodařilo nainstalovat. Zkuste to prosím znovu později.</string>
    <string name="debug_info">Pro vývojáře</string>
    <string name="update_preparing">Připravuji instalaci…</string>
    <string name="updating_settings">Aktualizace</string>
    <string name="location">Poloha</string>
    <string name="auto_download_updates">Automaticky stahovat aktualizace</string>
    <string name="update_wifi_charging_note">Automatické aktualizace se stahují pouze když je zařízení připojené k WiFi a nabíjí se.</string>
    <string name="last_checked">Naposledy zkontrolováno</string>
    <string name="never">Nikdy</string>
    <string name="check_for_updates">Zkontrolovat aktualizace</string>
    <string name="checking_updates">Kontroluji…</string>
    <string name="update_check_up_to_date">Máte nejnovější verzi</string>
    <string name="update_check_downloaded">Aktualizace byla stažena</string>
    <string name="update_check_failed">Kontrola aktualizací se nezdařila</string>
    <string name="update_available_title">Nová verze</string>
    <string name="update_available_message">Je k dispozici nová verze %1$s. Chcete ji stáhnout?</string>
    <string name="update_download_action">Stáhnout</string>
    <string name="update_downloading">Stahuji…</string>
    <string name="update_download_failed">Stažení se nezdařilo</string>
    <string name="update_prompt_title">Automatické aktualizace</string>
    <string name="update_prompt_message">Má aplikace automaticky stahovat aktualizace?\nAktualizace se stáhne pouze když je zařízení připojené k WiFi a nabíjí se.\nSvoji volbu můžete kdykoliv změnit v nastavení.</string>
    <string name="update_prompt_enable">Zapnout</string>
    <string name="update_prompt_decline">Teď ne</string>
    <string name="allow_location_text">Pro změnu nastevení musí mít aplikace povolený přístup k poloze zařízení</string>
    <string name="allow_fine_location_text">Pro nejlepší fungování aplikace povolte přístup k přesné poloze zařízení</string>
    <string name="allow_location">Povolit přístup k poloze</string>
    <string name="allow_fine_location">Povolit přístup k přesné poloze</string>
    <string name="sort_stops_by_distance">Řadit zastávky podle vzdálenosti</string>
    <string name="last_updated">Aktualizováno:</string>
</resources>