<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/divider"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

        <Button
            android:id="@+id/open_departures"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/departures"
            app:icon="@drawable/bus_light_full"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_map"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_map"
            app:icon="@drawable/location_arrow"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_vehicles"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicles"
            app:icon="@drawable/list_ul_regular"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_events"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/events"
            app:icon="@drawable/bolt_regular"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_diversions"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diversions"
            app:icon="@drawable/triangle_exclamation_regular"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_news"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news"
            app:icon="@drawable/message_lines_regular"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_schemes"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schemes"
            app:icon="@drawable/code_fork_regular"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_settings"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:icon="@drawable/gear_regular"
            app:iconSize="24dp"
            />

        <Button
            android:id="@+id/open_about"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            app:icon="@drawable/circle_info_regular"
            app:iconSize="24dp"
            />

        <!-- empty button to add line after the last element-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/MyButtonStyle"
            android:clickable="false"
            android:focusable="false"
                />


</LinearLayout>