<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_margin="32dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:text="@string/sorting"
            android:textColor="@color/secondaryColor"
            android:textSize="18dp"
            android:layout_marginBottom="8dp" />


        <RadioGroup
            android:id="@+id/sort_order_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sort_ascending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/ascending"
                android:checked="true"
                android:padding="8dp"
                android:drawableLeft="@drawable/sort_a_z"
                android:drawablePadding="8dp"
                android:drawableTint="@color/light_blue"
                android:background="@drawable/sort_button_selector_left"
                />

            <RadioButton
                android:id="@+id/sort_descending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/descending"
                android:padding="8dp"
                android:drawableLeft="@drawable/sort_z_a"
                android:drawablePadding="8dp"
                android:drawableTint="@color/light_blue"

                android:background="@drawable/sort_button_selector_right"
                />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sort_by"
            android:textColor="@color/secondaryColor"
            android:layout_marginTop="16dp"
            android:textSize="14dp"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/sort_by_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RadioButton
                android:id="@+id/sort_line_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:button="@null"
                android:text="Linky"
                android:padding="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/sort_button_selector"
                />

            <RadioButton
                android:id="@+id/sort_vehicle_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:button="@null"
                android:text="Evidenčního čísla"
                android:padding="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/sort_button_selector"
                />

            <RadioButton
                android:id="@+id/sort_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:button="@null"
                android:text="Kurzu"
                android:padding="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/sort_button_selector"
                />

            <RadioButton
                android:id="@+id/sort_delay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:button="@null"
                android:text="Zpoždění"
                android:padding="16dp"
                android:background="@drawable/sort_button_selector"
                />

        </RadioGroup>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>